--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,25 +63,6 @@ jobs:
         with:
           config: ${{ env.CONFIG }}
       - name: Setup integration test environment
-        run: make pip build # integration-env-up
+        run: make pip build-and-test
       - name: Run integration tests
         run: make blackbox
-  # upload-to-pypi:
-  #   runs-on: ubuntu-20.04
-  #   container: python:3.9
-  #   needs: ['build-test']
-  #   if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
-  #   steps:
-  #     - name: Check out code
-  #       uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Install dependencies
-  #       run: pip install wheel
-  #     - name: Build package
-  #       run: python setup.py sdist bdist_wheel
-  #     - name: Release
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         user: __token__
-  #         password: ${{ secrets.PYPI_API_TOKEN }}
