--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install pip dependencies
-        run: make pip
-      - name: Build and Test
-        run: make build-and-test
+        run: make pip-publish
+      - name: build-and-test
+        run: make unit-test
   run-integration-tests:
     runs-on: ubuntu-20.04
     steps:
@@ -63,6 +63,6 @@ jobs:
         with:
           config: ${{ env.CONFIG }}
       - name: Setup integration test environment
-        run: make pip build-and-test
+        run: make pip-test build-and-test
       - name: Run integration tests
         run: make blackbox
