--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,6 @@ jobs:
         with:
           config: ${{ env.CONFIG }}
       - name: Setup integration test environment
-        run: make pip-test build-and-test
+        run: make pip-test unit-test
       - name: Run integration tests
         run: make blackbox
