--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,13 +38,38 @@ jobs:
       - name: Install required os level applications
         run: |
           sudo apt update -y
-          sudo apt install -y curl git nodejs python-is-python3 python3-pip
+          sudo apt install -y curl git nodejs
           sudo apt -y install ca-certificates curl gnupg lsb-release
           sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
           sudo echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
             $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
           sudo apt update
           sudo apt -y install docker-ce docker-ce-cli containerd.io
+      - name: Install Python 3.10 via asdf
+        run: |
+          git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.9.0
+          . $HOME/.asdf/asdf.sh
+          asdf plugin add python
+          python_version=$(asdf latest python 3.10)
+          asdf install python $python_version
+          asdf global python $python_version
+          asdf reshim python
+          python --version
+#      - name: Install Python 3.10
+#        run: |
+#          sudo apt install -y software-properties-common
+#          sudo add-apt-repository -y ppa:deadsnakes/ppa
+#          sudo apt install -y python3.10
+#          python3.10 --version # Check install.
+#          sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
+#          [ "$(python --version)" = "$(python3.10 --version)" ] && echo "Default configured" || (echo "Configuration error" && exit 1)
+#      - name: Install Python environment tooling
+#        run: |
+#          sudo apt install -y \
+#            python-is-python3 \
+#            python3-html5lib \
+#            python3.10-distutils \
+#            python3-pip
       - name: Setup docker compose
         run: |
            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
@@ -62,7 +87,11 @@ jobs:
         uses: lucasvanmol/algorand-sandbox-action@v1
         with:
           config: ${{ env.CONFIG }}
-      - name: Setup integration test environment
-        run: make pip-test unit-test
       - name: Run integration tests
-        run: make gh-blackbox
+        run: |
+          . $HOME/.asdf/asdf.sh
+          asdf reshim python
+          python3 -m venv .venv
+          source .venv/bin/activate
+          make pip-test unit-test
+          make gh-blackbox
