--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ classifiers =
 
 [options]
 package_dir =
-    = blackbox
+    = .
 packages = find:
 python_requires = >=3.8
 
 [options.packages.find]
-where = blackbox
+where = .
