--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = .
+# package_dir =
+#    =blackbox
 packages = find:
 python_requires = >=3.8
 
