--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,9 @@ jobs:
         uses: lucasvanmol/algorand-sandbox-action@v1
         with:
           config: ${{ env.SANDBOX_CONFIG }}
-      - name: Setup integration test environment
+      - name: Setup integration test environment (and run a smoke unit test)
         run: make pip-development unit-test
-      - name: Run integration tests
+      - name: Setup Jupyter notebooks environment
+        run: make pip-notebooks
+      - name: Run integration tests and Jupyter notebooks
         run: make gh-blackbox
