--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,10 @@
+[mypy]
+
+[mypy-algosdk.*]
+ignore_missing_imports = True
+
 [mypy-pytest.*]
 ignore_missing_imports = True
 
-[mypy-algosdk.*]
+[mypy-setuptools.*]
 ignore_missing_imports = True
