--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     container: python:${{ matrix.python }}
     strategy:
       matrix:
-        python: [ "3.8", "3.9", "3.10" ]
+        python: [ "3.9", "3.10" ]
     steps:
       - run: python3 --version
       - name: Check out code
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python: [ "3.8", "3.9", "3.10" ]
+        python: [ "3.9", "3.10" ]
     steps:
       - name: Check out code
         uses: actions/checkout@v2
